--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/MemberInfoList/MemberInfoList.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/MemberInfoList/MemberInfoList.cshtml
@@ -23,7 +23,7 @@
                                 var member = FcbMemberHelper.GetMemberAllInfo();
                                 if (!member.IsEmployee && !member.IsManager)
                                 {
-                                <option value="@MailInfoTypeEnum.理顧預約.ToString()">@MailInfoTypeEnum.理顧預約.ToString()</option>
+                                    <option value="@MailInfoTypeEnum.理顧預約.ToString()">@MailInfoTypeEnum.理顧預約.ToString()</option>
                                 }
                             }
                             <option value="@MailInfoTypeEnum.優惠活動.ToString()">@MailInfoTypeEnum.優惠活動.ToString()</option>
@@ -73,30 +73,30 @@
                 <tbody id="uid-fjs-infoList" data-infoList-Table></tbody>
 
                 <script id="uid-template-infoList" type="text/html">
-                <tr class="c-cardTable__item u-center@dt-only">
-                    <td class="c-cardTable__space"></td>
-                    <!-- .u-important.u-hidden@mb-only: 若已讀，需要加上此樣式，以在手機版隱藏此欄位 -->
-                    <td class="c-cardTable__body <% if (HaveRead){%><%= 'u-important u-hidden@mb-only' %><%}%>" data-card-table-width="1/1">
-                        <div class="c-cardTable__content">
-                            <!-- .u-invisible: 若已讀，需要加上此樣式，以便在pad版佔位不顯示(pad版需預留高度) -->
-                            <div class="o-iconText o-iconText--dotOg t-focus u-middle <% if (HaveRead){%><%= 'u-invisible' %><%}%>" data-after-lt="未讀" data-recordNum="<%= RecordNumber %>" data-haveread="<%= HaveRead %>"></div>
-                        </div>
-                    </td>
-                    <td class="c-cardTable__body" data-card-table-width="1/2">
-                        <div class="c-cardTable__content u-nowrap@dt-only"><%= InfoDateTime %></div>
-                    </td>
-                    <td class="c-cardTable__body" data-card-table-width="1/2">
-                        <div class="c-cardTable__content u-right@lt">
-                            <span class="o-hangTag u-middle" data-mailType><%= MailInfoType %></span>
-                        </div>
-                    </td>
-                    <td class="c-cardTable__body u-left">
-                        <div class="c-cardTable__content u-line-2@lt-only">
-                            <a href="<%= InfoLink %>" target="_blank" class="o-contentLink t-bold u-ellipsis-1@dt-only u-ellipsis-2@lt"><%= InfoContent %></a>
-                        </div>
-                    </td>
-                    <td class="c-cardTable__space"></td>
-                </tr>
+                    <tr class="c-cardTable__item u-center@dt-only">
+                        <td class="c-cardTable__space"></td>
+                        <!-- .u-important.u-hidden@mb-only: 若已讀，需要加上此樣式，以在手機版隱藏此欄位 -->
+                        <td class="c-cardTable__body <% if (HaveRead){%><%= 'u-important u-hidden@mb-only' %><%}%>" data-card-table-width="1/1">
+                            <div class="c-cardTable__content">
+                                <!-- .u-invisible: 若已讀，需要加上此樣式，以便在pad版佔位不顯示(pad版需預留高度) -->
+                                <div class="o-iconText o-iconText--dotOg t-focus u-middle <% if (HaveRead){%><%= 'u-invisible' %><%}%>" data-after-lt="未讀" data-recordNum="<%= RecordNumber %>" data-haveread="<%= HaveRead %>"></div>
+                            </div>
+                        </td>
+                        <td class="c-cardTable__body" data-card-table-width="1/2">
+                            <div class="c-cardTable__content u-nowrap@dt-only"><%= InfoDateTime %></div>
+                        </td>
+                        <td class="c-cardTable__body" data-card-table-width="1/2">
+                            <div class="c-cardTable__content u-right@lt">
+                                <span class="o-hangTag u-middle" data-mailType><%= MailInfoType %></span>
+                            </div>
+                        </td>
+                        <td class="c-cardTable__body u-left">
+                            <div class="c-cardTable__content u-line-2@lt-only">
+                                <a href="<%= InfoLink %>" target="_blank" class="o-contentLink t-bold u-ellipsis-1@dt-only u-ellipsis-2@lt" data-infoContent><%= InfoContent %></a>
+                            </div>
+                        </td>
+                        <td class="c-cardTable__space"></td>
+                    </tr>
                 </script>
             </table>
             <div class="l-pagination">
@@ -145,21 +145,20 @@
                 return;
             }
 
-        function ConvertSqlDateTimeToJsDateTime(sqlDateTime)
-        {
-            let dataTimearray = sqlDateTime.split('T'); //ex ['2024-06-17','19:27:10.297']
-            let dateStr = dataTimearray[0].replaceAll('-', '/');
-            let timeArry = dataTimearray[1].split(':');
-            let timeStr = timeArry[0] + ":" + timeArry[1];
-            return dateStr + " " + timeStr;
-        }
-        function loading() {
-            window.loading('show');
-            setTimeout(() => {
-                window.loading('hide');
-            }, 300);
+            function ConvertSqlDateTimeToJsDateTime(sqlDateTime) {
+                let dataTimearray = sqlDateTime.split('T'); //ex ['2024-06-17','19:27:10.297']
+                let dateStr = dataTimearray[0].replaceAll('-', '/');
+                let timeArry = dataTimearray[1].split(':');
+                let timeStr = timeArry[0] + ":" + timeArry[1];
+                return dateStr + " " + timeStr;
             }
-            window.ResetMailInfoTable = function(data)  {
+            function loading() {
+                window.loading('show');
+                setTimeout(() => {
+                    window.loading('hide');
+                }, 300);
+            }
+            window.ResetMailInfoTable = function (data) {
 
                 let fjsInfoList;
                 if (data) {
@@ -179,105 +178,133 @@
                 }
             }
             function initFilter(data) {
-                    let opts = {
-                        template: '#uid-template-infoList',
-                        criterias: [
-                            { field: 'MailInfoType', ele: '#MailInfoType_criteria', event: 'change', all: 'all' }
-                        ],
-                        callbacks: {
-                            beforeRecordRender: function (record) {
-                                record.InfoDateTime = ConvertSqlDateTimeToJsDateTime(record.InfoDateTime);
-                            },
-                            afterFilter: function (result) {
-                                this.paginator.setCurrentPage(1);
-                                $('[data-InfoList]').removeClass('u-hidden');
-                            }
+                let opts = {
+                    template: '#uid-template-infoList',
+                    criterias: [
+                        { field: 'MailInfoType', ele: '#MailInfoType_criteria', event: 'change', all: 'all' }
+                    ],
+                    callbacks: {
+                        beforeRecordRender: function (record) {
+                            record.InfoDateTime = ConvertSqlDateTimeToJsDateTime(record.InfoDateTime);
                         },
-                        pagination: {
-                            container: '#uid-pagination-infoList',
-                            paginationView: '#uid-template-pagination-infoList',
-                            visiblePages: 0,
-                            perPage: {
-                                values: [10, 50, 100, data.length],
-                                container: '#uid-perPage-infoList',
-                                perPageView: '#uid-template-perPage-infoList'
-                            }
+                        afterFilter: function (result) {
+                            this.paginator.setCurrentPage(1);
+                            $('[data-InfoList]').removeClass('u-hidden');
                         }
+                    },
+                    pagination: {
+                        container: '#uid-pagination-infoList',
+                        paginationView: '#uid-template-pagination-infoList',
+                        visiblePages: 0,
+                        perPage: {
+                            values: [10, 50, 100, data.length],
+                            container: '#uid-perPage-infoList',
+                            perPageView: '#uid-template-perPage-infoList'
+                        }
+                    }
                 };
                 fjsInfoList = FilterJS(data, '#uid-fjs-infoList', opts);
-                    function fnScrollUp() {
-                        loading();
-                        $('[data-infoList-Table]').scrollPosition('scroll');
-                    }
-
-                    function fnScrollUpPageTo1() {
-                        loading();
-                        $('[data-infoList-Table]').scrollPosition('scroll');
-                        fjs.paginator.setCurrentPage(1);
-                    }
-
-                    let $containgerPagination = $('#uid-pagination-infoList');
-                    $containgerPagination.on('click', '[data-page]', fnScrollUp);
-                    $containgerPagination.on('keypress', '[data-page-input]', function (e) {
-                        if (e.which === 13) {
-                            fnScrollUp();
-                        }
-                    });
-                    $('#uid-view-perPage-infoList').on('change.pagesize', fnScrollUpPageTo1).sizebox();
+                function fnScrollUp() {
+                    loading();
+                    $('[data-infoList-Table]').scrollPosition('scroll');
                 }
 
-            window.ResetMailInfoTable();
-        $('#uid-fjs-infoList').on('click', 'tr', function () {
-            let $this = $(this);
-            let isRead = $this.find('[data-haveread]').data('haveread');
-            if (isRead) {
-                return;
+                function fnScrollUpPageTo1() {
+                    loading();
+                    $('[data-infoList-Table]').scrollPosition('scroll');
+                    fjs.paginator.setCurrentPage(1);
+                }
+
+                let $containgerPagination = $('#uid-pagination-infoList');
+                $containgerPagination.on('click', '[data-page]', fnScrollUp);
+                $containgerPagination.on('keypress', '[data-page-input]', function (e) {
+                    if (e.which === 13) {
+                        fnScrollUp();
+                    }
+                });
+                $('#uid-view-perPage-infoList').on('change.pagesize', fnScrollUpPageTo1).sizebox();
             }
-             $.ajax({
-                url: '@ClientRoute.GenerateUrl(this, "MemberInfoList", "SetInfoHaveReadByMember")',
-                 type: 'POST',
-                 data: { "mailInfoType": $this.find('[data-mailType]').text(), "recordNumber": $this.find('[data-recordnum]').data('recordnum'),
-                 "pageUrl": window.location.pathname + window.location.search},
-                 beforeSend: function () { window.loading('show'); },
-                 success : function(data, textStatus, jqXHR) {
+            //到價通知產品已取消關注，跳出提醒
+            function PopUpEvent(url, title) {
+                $('#focusMiss').find('[data-missname]').text(title);
+                $.magnificPopup.open({
+                    items: {
+                        src: '#focusMiss'
+                    },
+                    type: 'inline',
+                    callbacks: {
+                        close: function Location() {
+                             window.open(url);
+                        }
+                    }
+                });
+            }
+            window.ResetMailInfoTable();
+            $('#uid-fjs-infoList').on('click', 'tr', function () {
+                let $this = $(this);
+                let mailType = $this.find('[data-mailType]').text();
+                let prefix = location.protocol + "//" + location.hostname;
+                let locationUrl = new URL(prefix + this.getElementsByTagName('a')[0].getAttribute('href'));
+                let infoContent = $this.find('[data-infoContent]').text().split('已')[0].trim().replaceAll('收盤價', '');
+                if (mailType === "到價通知") {
+                    let focusId = locationUrl.searchParams.get('id');
+                    if (!window.checkItemExists('focus', focusId)) {
+                        e.preventDefault();
+                        if (e.target.tagName.toLowerCase() === 'a') {
+                            focusId = locationUrl.searchParams.get('id');
+                            PopUpEvent(locationUrl, infoContent);
+                        }
+                    }
+                }
+                let isRead = $this.find('[data-haveread]').data('haveread');
+                if (isRead) {
+                    return;
+                }
+                $.ajax({
+                    url: '@ClientRoute.GenerateUrl(this, "MemberInfoList", "SetInfoHaveReadByMember")',
+                    type: 'POST',
+                    data: {
+                        "mailInfoType": mailType, "recordNumber": $this.find('[data-recordnum]').data('recordnum'),
+                        "pageUrl": window.location.pathname + window.location.search
+                    },
+                    beforeSend: function () { window.loading('show'); },
+                    success: function (data, textStatus, jqXHR) {
                         if (data && data.success) {
                             window.ResetMailInfoTable();
                             window.ResetTopInfoList();
                             window.loading('hide');
-                       }else if(!data.success && data.block)
-                        {
+                        } else if (!data.success && data.block) {
                             window.VerifyLoginRedirctToHome(data.success);
                             return;
                         }
-                 },
-                 error: function (jqXHR, textStatus, errorThrown) { },
-                 complete: function () { $('.c-loading').loading('hide'); }
-             });
-        });
+                    },
+                    error: function (jqXHR, textStatus, errorThrown) { },
+                    complete: function () { $('.c-loading').loading('hide'); }
+                });
+            });
             $('#ReadAllBtn').on('click', function () {
                 if ($('[data-haveread=false]').length == 0) {
                     return;
                 }
-             $.ajax({
-                url: '@ClientRoute.GenerateUrl(this, "MemberInfoList", "SetAllInfoHaveReadByMember")',
-                 type: 'POST',
-                 beforeSend: function () { window.loading('show'); },
-                 data : {"pageUrl": window.location.pathname + window.location.search},
-                 success : function(data, textStatus, jqXHR) {
+                $.ajax({
+                    url: '@ClientRoute.GenerateUrl(this, "MemberInfoList", "SetAllInfoHaveReadByMember")',
+                    type: 'POST',
+                    beforeSend: function () { window.loading('show'); },
+                    data: { "pageUrl": window.location.pathname + window.location.search },
+                    success: function (data, textStatus, jqXHR) {
                         if (data && data.success) {
                             window.ResetMailInfoTable();
                             window.ResetTopInfoList();
                             window.loading('hide');
-                       }else if(!data.success && data.block)
-                        {
+                        } else if (!data.success && data.block) {
                             window.VerifyLoginRedirctToHome(data.success);
                             return;
                         }
-                 },
-                 error: function (jqXHR, textStatus, errorThrown) { },
-                 complete: function () { $('.c-loading').loading('hide'); }
-             });
-        });
+                    },
+                    error: function (jqXHR, textStatus, errorThrown) { },
+                    complete: function () { $('.c-loading').loading('hide'); }
+                });
+            });
         });
     })(jQuery, window, document);
 </script>
