--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/MemberCalculationList/MemberCalculationList.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/MemberCalculationList/MemberCalculationList.cshtml
@@ -340,7 +340,7 @@
                             }
                         },
                         series: [{
-                            name: '已準備金額額',
+                            name: '已準備金額',
                             data: [data.current],
                             color: '#FDCE5E'
                         }, {
