update: 調整js funciotn 加入e

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/MemberInfoList/MemberInfoList.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/MemberInfoList/MemberInfoList.cshtml
@@ -240,7 +240,7 @@
                 });
             }
             window.ResetMailInfoTable();
-            $('#uid-fjs-infoList').on('click', 'tr', function () {
+            $('#uid-fjs-infoList').on('click', 'tr', function (e) {
                 let $this = $(this);
                 let mailType = $this.find('[data-mailType]').text();
                 let prefix = location.protocol + "//" + location.hostname;
