--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/MemberCalculationList/MemberCalculationList.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/MemberCalculationList/MemberCalculationList.cshtml
@@ -48,7 +48,7 @@
         }
     }
 </style>
-<div class="c-section">
+<div class="c-section" style="margin-top: 60px;">
     <div class="c-section__content">
         <div class="l-table">
             <table class="c-table@dt-only c-cardTable@lt c-cardTable--zebra">
