--- a/src/Feature/Account/platform/Views/Feature/Wealth/Account/MemberCard/MemberCard.cshtml
+++ b/src/Feature/Account/platform/Views/Feature/Wealth/Account/MemberCard/MemberCard.cshtml
@@ -68,15 +68,11 @@
                                                     break;
                                                 case "3":
                                                     riskName = "積極型";
-                                                    break;
-                                                case "4":
-                                                    riskName = "已逾期";
-                                                    break;
-
+                                                    break;                                            
                                             }
                                             <b>@riskName</b>
                                             <br>
-                                            <a href="@WebKycLink" target="_blank" rel="noopener noreferrer" class="o-link t4 @(member.Risk == "4" ? string.Empty : "u-hidden")" id="GoKYC">進行風險屬性評估</a>
+                                            <a href="@WebKycLink" target="_blank" rel="noopener noreferrer" class="o-link t4 @(member.IsKycExpire ? string.Empty : "u-hidden")" id="GoKYC">進行風險屬性評估</a>
                                         }
                                         else
                                         {
